# S-vereign

./: .gitignore  Cargo.toml  Modelfile  build.gradle  calculation_core.flux  hardware_blueprint.gcode  hardware_config.toml  settings.gradle  varcpu_resume.md
T3MP3ST/: autoscrape.cjs  autoscrape.js  daemon_parser.py  package-lock.json  package.json
T3MP3ST/scripts/: smoke.mjs
T3MP3ST/src/: index.ts
T3MP3ST/src/operators/: index.ts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sovereigncore/otp/service/: CryptoProviderService.kt
app/src/main/java/com/sovereigncore/otp/ui/: CryptoActivity.kt
sovchaf/: Cargo.toml
sovchaf/src/: main.rs  otp.rs  stream_adapter.rs
src/: chunking.rs  export.rs  ingest.rs  jni_bridge.rs  lib.rs  optical_adapter.rs  sodium_ffi.rs  stream_adapter.rs
src/sovereign_core_verified/: LEDGER.md  aces_validator.py  crash_probe.py  otp_chunking.py  otp_export.py  otp_ingest.py  otp_pad.py  otp_transport.py  posture_watchdog.py  run_four_axis_tests.py  run_key_ceremony.py  sovereign_memory.py  test_chunking.py  test_defer_fill.py  test_export.py  test_ingest.py  test_journal_hardening.py  test_otp_pad.py  test_otp_transport.py  test_reserve_into.py  test_signing_wrapper.py
src/sovereign_core_verified/rust/: Cargo.toml
src/sovereign_core_verified/rust/src/: file_adapter.rs  lib.rs  locked_buffer.rs  pad_store.rs  transport.rs
tests/: send_message.rs
