[package]
name = "chaff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["small_rng", "getrandom"] }
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
